--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group 'com.vite'
-version '1.0-SNAPSHOT'
+version '0.1.0'
 
 repositories {
     mavenCentral()
@@ -24,9 +24,6 @@ intellij {
     pluginName = 'vite'
     plugins = [
             'JavaScriptLanguage',
-            'CSS',
-            'platform-images',
-            'yaml',
     ]
 }
 patchPluginXml {
