fix: 修复图标的路径错误，修复插件在 webstorm 中不生效的问题，修改 README

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -11,8 +11,10 @@
     <depends>JavaScript</depends>
 
     <extensions defaultExtensionNs="com.intellij">
-        <projectTemplatesFactory implementation="com.rxliuli.vite.cli.ViteProjectTemplateFactory"/>
-        <!-- Add your extensions here -->
+        <directoryProjectGenerator
+                implementation="com.rxliuli.vite.cli.ViteCliProjectGenerator"/>  <!-- works in WebStorm and other SmallIDEs -->
+        <projectTemplatesFactory
+                implementation="com.rxliuli.vite.cli.ViteProjectTemplateFactory"/> <!-- works in IntelliJ IDEA -->
     </extensions>
 
     <actions>
