--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,9 +1,7 @@
 <idea-plugin>
     <id>com.rxliuli.vite-jetbrains-plugin</id>
-    <name>ViteJetbrainsPlugin</name>
-    <vendor email="rxliuli@gmail.com" url="https://github.com/rxliuli/create-vite-project">com.rxliuli</vendor>
-
-    <description>vite 脚手架在 jetbrains ide 中的集成，主要负责直接使用 ide 的引导面板创建一个项目。</description>
+    <name>Vite Integrated</name>
+    <vendor email="rxliuli@gmail.com" url="https://github.com/rxliuli/vite-jetbrains-plugin">rxliuli</vendor>
 
     <!-- please see https://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/plugin_compatibility.html
          on how to target different products -->
